Configurando JSF e PrimeFaces, Criando o index  v : 27 - 29

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,12 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>aulasjsfprimefaces</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xmlns="http://java.sun.com/xml/ns/javaee"
+		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+		 xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsf"
+		 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+		 id="WebApp_ID" metadata-complete="true" version="3.0">
+  <display-name>Projeto Java Web Completo</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <session-config>
+  	<session-timeout>15</session-timeout> <!-- Invalida a sessão em 15 minutos -->
+  	<tracking-mode>COOKIE</tracking-mode>
+  </session-config>
+  <!-- Acesso negado do Spring Security -->
+  <error-page>
+  	<exception-type>org.springframework.security.access.AccessDeniedException</exception-type>
+  	<location>/error/acessoNegado.jsf</location>
+  </error-page>
+  <!-- Url não encontrada -->
+  <error-page>
+  	<exception-type>com.sun.faces.context.FacesFileNotFoundException</exception-type>
+  	<location>/error/paginaNaoEncontrada.jsf</location>
+  </error-page>
+  <!-- 403: Acesso Negado -->
+  <error-page>
+  	<error-code>403</error-code>
+  	<location>/error/AcessoNegado.jsf</location>
+  </error-page>
+  <!-- 500: Error interno do servidor -->
+   <error-page>
+  	<error-code>500</error-code>
+  	<location>/error/error.jsf</location>
+  </error-page>
+  <!-- Aceitar comentarios no meio da pagina jsf -->
+  <context-param>
+  	<param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
+  	<param-value>true</param-value>
+  </context-param>
+  <!-- Carregar componentes filhos -->
+  <context-param>
+  	<param-name>com.sun.faces.allowTextChildren</param-name>
+  	<param-value>true</param-value>
+  </context-param>
+  
+  <context-param>
+  	<param-name>com.sun.faces.expressionFactory</param-name>
+  	<param-value>com.sun.el.ExpressionFactoryImpl</param-value>
+  </context-param>
+  <!-- Desliga o cache (Fez alguma alteração na pagina jsf, ela ja e compilada) -->
+  <context-param>
+  	<param-name>javax.faces.FACELETS_REFRESH_PERIOD</param-name>
+  	<param-value>0</param-value>
+  </context-param>
+  <!-- extensoes aceitas -->
+  <context-param>
+  	<param-name>javax.faces.DEFAULT_SUFFIX</param-name>
+  	<param-value>.xhtml .html .jsp</param-value>
+  </context-param>
+  <!-- Estagio do projeto -->
+  <context-param>
+  	<param-name>javax.faces.PROJECT_STAGE</param-name>
+  	<param-value>Production</param-value>
+  </context-param>
+  <!-- Tema do jsf -->
+  <context-param>
+  	<param-name>primefaces.THEME</param-name>
+  	<param-value>smoothness</param-value>
+  </context-param>
+  
+  <!-- Upload de imagens primefaces -->
+  <filter>
+  	<filter-name>PrimeFaces fileUpload Filter</filter-name>
+  	<filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>PrimeFaces fileUpload Filter</filter-name>
+  	<servlet-name>Faces Servlets</servlet-name>
+  	<url-pattern>*.jsf</url-pattern>
+  </filter-mapping>
+  
+  <!-- DataSource -->
+  <resource-ref>
+  	<description>DataSource datasource</description>
+  	<res-ref-name>jdbc/datasource</res-ref-name>
+  	<res-type>javax.sql.DataSource</res-type>
+  	<res-auth>Container</res-auth>
+  </resource-ref>
+  
+  <!-- Servlet do jsf -->
+  <servlet>
+  	<servlet-name>Faces Servlet</servlet-name>
+  	<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+  	<load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>Faces Servlet</servlet-name>
+  	<url-pattern>*.jsf</url-pattern>
+  </servlet-mapping>
+	  
 </web-app>
