Criando o applicationContext-Security, finanlizando o web.xml v : 38 - 41

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -39,6 +39,14 @@
   	<error-code>500</error-code>
   	<location>/error/error.jsf</location>
   </error-page>
+  <!-- Para a aplicação ser compativel com o JSP -->
+  <jsp-config>
+  	<jsp-property-group>
+  		<url-pattern>/**</url-pattern>
+  		<el-ignored>false</el-ignored>
+  	</jsp-property-group>
+  </jsp-config>
+  
   <!-- Aceitar comentarios no meio da pagina jsf -->
   <context-param>
   	<param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
@@ -54,10 +62,21 @@
   	<param-name>com.sun.faces.expressionFactory</param-name>
   	<param-value>com.sun.el.ExpressionFactoryImpl</param-value>
   </context-param>
+  
+  <!-- Ler os arquivos do Spring -->
+  <context-param>
+  	<param-name>contextConfigLocation</param-name>
+  	<param-value>
+  	/WEB-INF/applicationContext.xml
+  	/WEB-INF/spring-servlet-servlet.xml
+  	/WEB-INF/applicationContext-security.xml
+  	</param-value>
+  </context-param>
+  
   <!-- Desliga o cache (Fez alguma alteração na pagina jsf, ela ja e compilada) -->
   <context-param>
   	<param-name>javax.faces.FACELETS_REFRESH_PERIOD</param-name>
-  	<param-value>0</param-value>
+  	<param-value>0</param-value> <!-- Em segundos -->
   </context-param>
   <!-- extensoes aceitas -->
   <context-param>
@@ -74,17 +93,68 @@
   	<param-name>primefaces.THEME</param-name>
   	<param-value>smoothness</param-value>
   </context-param>
+  <!-- Filtro da aplicação -->
+  <filter>
+  	<filter-name>conexaoFilter</filter-name>
+  	<filter-class>br.com.project.filter.FilterOpenSessionInView</filter-class>
+  </filter>
+  
+  <!-- Filtro do Spring Security -->
+  <filter>
+  	<filter-name>springSecurityFilterChain</filter-name>
+  	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter>
+  	<filter-name>encoding-filter</filter-name>
+  	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+  	<init-param>
+  		<param-name>encoding</param-name>
+  		<param-value>ISO-8859-1</param-value>
+  	</init-param>
+  </filter>
   
   <!-- Upload de imagens primefaces -->
   <filter>
   	<filter-name>PrimeFaces fileUpload Filter</filter-name>
   	<filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
   </filter>
+  
+  <filter-mapping>
+  	<filter-name>encoding-filter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <filter-mapping>
+  	<filter-name>conexaoFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <filter-mapping>
+  	<filter-name>springSecurityFilterChain</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
   <filter-mapping>
   	<filter-name>PrimeFaces fileUpload Filter</filter-name>
   	<servlet-name>Faces Servlets</servlet-name>
   	<url-pattern>*.jsf</url-pattern>
   </filter-mapping>
+  
+  <listener>
+  	<listener-class>br.com.project.listener.ContextLoaderListenerCaixakiUtils</listener-class>
+  </listener>
+  
+  <listener>
+  	<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+  </listener>
+  
+  <listener>
+  	<listener-class>br.com.project.listener.CustomListener</listener-class>
+  </listener>
+  
+  <listener>
+  	<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+  </listener>
   
   <!-- DataSource -->
   <resource-ref>
@@ -93,6 +163,17 @@
   	<res-type>javax.sql.DataSource</res-type>
   	<res-auth>Container</res-auth>
   </resource-ref>
+  
+  <servlet>
+  	<servlet-name>spring-servlet</servlet-name>
+  	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  	<load-on-startup>1</load-on-startup>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>spring-servlet</servlet-name>
+  	<url-pattern>/</url-pattern>
+  </servlet-mapping>
   
   <!-- Servlet do jsf -->
   <servlet>
